Ajuestes en inventario

--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -160,8 +160,8 @@
                                 <td><span class="badge badge-danger">5</span></td>
                                 <td>10</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -172,8 +172,8 @@
                                 <td><span class="badge badge-warning">2</span></td>
                                 <td>5</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -184,8 +184,8 @@
                                 <td><span class="badge badge-danger">3</span></td>
                                 <td>15</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -196,8 +196,8 @@
                                 <td><span class="badge badge-success">25</span></td>
                                 <td>10</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -208,8 +208,8 @@
                                 <td><span class="badge badge-success">12</span></td>
                                 <td>5</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                         </tbody>
