--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -28,7 +28,7 @@
                         <a href="clientes.html" class="nav-link">Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a href="colegios.html" class="nav-link active">Colegios</a>
+                        <a href="colegios.html" class="nav-link ">Colegios</a>
                     </li>
                     <li class="nav-item">
                         <a href="inventario.html" class="nav-link">Inventario</a>
@@ -37,7 +37,7 @@
                         <a href="produccion.html" class="nav-link">Producción</a>
                     </li>
                     <li class="nav-item ">
-                        <a href="agenda.html" class="nav-link">Agenda</a>
+                        <a href="agenda.html" class="nav-link active">Agenda</a>
                     </li>
                     <li class="nav-item">
                       <a href="reportes.html" class="nav-link">Reportes</a>
