--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Sistema de Gestión Fotográfica</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/index.css" >
 </head>
 <body>
     <div class="container">
@@ -124,7 +125,8 @@
                                 <td><span class="badge badge-info">Nuevo</span></td>
                                 <td>15/04/2023</td>
                                 <td class="actions">
-                                    <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                    <a href="#" class="btn btn-sm btn-ver">Ver</a>
+                                    <a href="#" class="btn btn-sm btn-editar">Editar</a>
                                 </td>
                             </tr>
                             <tr>
@@ -133,7 +135,8 @@
                                 <td><span class="badge badge-warning">Producción</span></td>
                                 <td>12/04/2023</td>
                                 <td class="actions">
-                                    <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                    <a href="#" class="btn btn-sm btn-ver">Ver</a>
+                                    <a href="#" class="btn btn-sm btn-editar">Editar</a>
                                 </td>
                             </tr>
                             <tr>
@@ -142,7 +145,8 @@
                                 <td><span class="badge badge-warning">Producción</span></td>
                                 <td>10/04/2023</td>
                                 <td class="actions">
-                                    <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                    <a href="#" class="btn btn-sm btn-ver">Ver</a>
+                                    <a href="#" class="btn btn-sm btn-editar">Editar</a>
                                 </td>
                             </tr>
                             <tr>
@@ -151,7 +155,8 @@
                                 <td><span class="badge badge-success">Entregado</span></td>
                                 <td>08/04/2023</td>
                                 <td class="actions">
-                                    <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                    <a href="#" class="btn btn-sm btn-ver">Ver</a>
+                                    <a href="#" class="btn btn-sm btn-editar">Editar</a>
                                 </td>
                             </tr>
                         </tbody>
