--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -121,8 +121,8 @@
                                 <td>-</td>
                                 <td>Juan Pérez</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -133,8 +133,8 @@
                                 <td>-</td>
                                 <td>María López</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -145,8 +145,8 @@
                                 <td>14/04/2023</td>
                                 <td>Carlos Sánchez</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                         </tbody>
