botones de paginación

--- a/pages/colegios.html
+++ b/pages/colegios.html
@@ -154,9 +154,9 @@
                 </div>
                 <div class="card-footer">
                     <div class="pagination">
-                        <button class="btn btn-sm">Anterior</button>
+                        <button class="btn btn-anterior">Anterior</button>
                         <span class="pagination-info">Página 1 de 1</span>
-                        <button class="btn btn-sm">Siguiente</button>
+                        <button class="btn btn-siguiente">Siguiente</button>
                     </div>
                 </div>
             </div>
