--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -198,9 +198,9 @@
                 </div>
                 <div class="card-footer text-right">
                     <div class="pagination">
-                        <button class="btn btn-sm">Anterior</button>
+                        <button class="btn btn-anterior">Anterior</button>
                         <span>Página 1 de 3</span>
-                        <button class="btn btn-sm btn-primary">Siguiente</button>
+                        <button class="btn  btn-siguiente">Siguiente</button>
                     </div>
                 </div>
             </div>
