--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -182,9 +182,9 @@
                 </div>
                 <div class="card-footer text-right">
                     <div class="pagination">
-                        <button class="btn btn-sm">Anterior</button>
+                        <button class="btn btn-anterior">Anterior</button>
                         <span>Página 1 de 1</span>
-                        <button class="btn btn-sm">Siguiente</button>
+                        <button class="btn btn-siguiente">Siguiente</button>
                     </div>
                 </div>
             </div>
