Ajustes en clientes y pedidos

--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -113,8 +113,8 @@
                                 <td data-label="Contacto">987654321</td>
                                 <td data-label="Colegio">-</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -124,8 +124,8 @@
                                 <td data-label="Contacto">987654322</td>
                                 <td data-label="Colegio">-</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -135,8 +135,8 @@
                                 <td data-label="Contacto">01-4562890</td>
                                 <td data-label="Colegio">Colegio San José</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -146,8 +146,8 @@
                                 <td data-label="Contacto">987654324</td>
                                 <td data-label="Colegio">-</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -157,15 +157,15 @@
                                 <td data-label="Contacto">987654325</td>
                                 <td data-label="Colegio">-</td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="card-footer text-right">
-                    <div class="pagination">
+                    <div class="pagination" >
                         <button class="btn btn-anterior">Anterior</button>
                         <span>Página 1 de 2</span>
                         <button class="btn btn-siguiente">Siguiente</button>
