--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -137,8 +137,8 @@
                                 <td></td>
                                 <td></td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary" onclick="mostrarDetalle('P001', 'Juan Pérez', 'Impresión Minilab', 'Nuevo', '15/04/2023', 'S/ 45.00')">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver" onclick="mostrarDetalle('P001', 'Juan Pérez', 'Impresión Minilab', 'Nuevo', '15/04/2023', 'S/ 45.00')">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -150,8 +150,8 @@
                                 <td></td>
                                 <td></td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary" onclick="mostrarDetalle('P002', 'María López', 'Enmarcado', 'En Producción', '12/04/2023', 'S/ 120.00')">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver" onclick="mostrarDetalle('P002', 'María López', 'Enmarcado', 'En Producción', '12/04/2023', 'S/ 120.00')">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -163,8 +163,8 @@
                                 <td></td>
                                 <td></td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary" onclick="mostrarDetalle('P003', 'Colegio San José', 'Recordatorio Escolar', 'En Producción', '10/04/2023', 'S/ 850.00')">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver" onclick="mostrarDetalle('P003', 'Colegio San José', 'Recordatorio Escolar', 'En Producción', '10/04/2023', 'S/ 850.00')">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -176,8 +176,8 @@
                                 <td></td>
                                 <td></td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary" onclick="mostrarDetalle('P004', 'Carlos Sánchez', 'Retoque Fotográfico', 'Entregado', '08/04/2023', 'S/ 75.00')">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver" onclick="mostrarDetalle('P004', 'Carlos Sánchez', 'Retoque Fotográfico', 'Entregado', '08/04/2023', 'S/ 75.00')">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                             <tr>
@@ -189,8 +189,8 @@
                                 <td></td>
                                 <td></td>
                                 <td class="actions">
-                                    <button class="btn btn-sm btn-primary" onclick="mostrarDetalle('P005', 'Ana Gómez', 'Enmarcado', 'Entregado', '05/04/2023', 'S/ 150.00')">Ver</button>
-                                    <button class="btn btn-sm btn-secondary">Editar</button>
+                                    <button class="btn btn-sm btn-ver" onclick="mostrarDetalle('P005', 'Ana Gómez', 'Enmarcado', 'Entregado', '05/04/2023', 'S/ 150.00')">Ver</button>
+                                    <button class="btn btn-sm btn-editar">Editar</button>
                                 </td>
                             </tr>
                         </tbody>
