--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -71,8 +71,8 @@
             <div class="header">
                 <h1>Gestión de Inventario</h1>
                 <div class="header-buttons">
-                    <button class="btn btn-secondary" id="btnMovimiento">Registrar Movimiento</button>
-                    <button class="btn btn-primary" id="btnNuevoProducto">Nuevo Producto</button>
+                    <button class="btn btn-movimiento" id="btnMovimiento">Registrar Movimiento</button>
+                    <button class="btn btn-nuevo" id="btnNuevoProducto">Nuevo Producto</button>
                 </div>
             </div>
 
