Agrega nueva fila con estados: Pendiente, En producción y Finalizado

--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -144,7 +144,7 @@
                             <tr>
                                 <th>ID</th>
                                 <th>Nombre</th>
-                                <th>Tipo</th>
+                                <th> Estado del producto</th>
                                 <th>Unidad</th>
                                 <th>Stock Actual</th>
                                 <th>Stock Mínimo</th>
@@ -155,7 +155,7 @@
                             <tr>
                                 <td>P001</td>
                                 <td>Papel fotográfico 10x15</td>
-                                <td>Papel Fotográfico</td>
+                                <td>Produccion</td>
                                 <td>Unidad</td>
                                 <td><span class="badge badge-danger">5</span></td>
                                 <td>10</td>
@@ -167,7 +167,7 @@
                             <tr>
                                 <td>P002</td>
                                 <td>Químico Revelador</td>
-                                <td>Químicos</td>
+                                <td> Finalizado</td>
                                 <td>Litro</td>
                                 <td><span class="badge badge-warning">2</span></td>
                                 <td>5</td>
@@ -179,7 +179,7 @@
                             <tr>
                                 <td>P003</td>
                                 <td>Varillas de Marco Tipo A</td>
-                                <td>Marcos y Varillas</td>
+                                <td>Produccion</td>
                                 <td>Unidad</td>
                                 <td><span class="badge badge-danger">3</span></td>
                                 <td>15</td>
@@ -191,7 +191,7 @@
                             <tr>
                                 <td>P004</td>
                                 <td>Papel fotográfico 13x18</td>
-                                <td>Papel Fotográfico</td>
+                                <td>Finalizado</td>
                                 <td>Unidad</td>
                                 <td><span class="badge badge-success">25</span></td>
                                 <td>10</td>
@@ -203,7 +203,7 @@
                             <tr>
                                 <td>P005</td>
                                 <td>Químico Fijador</td>
-                                <td>Químicos</td>
+                                <td>Finalizado</td>
                                 <td>Litro</td>
                                 <td><span class="badge badge-success">12</span></td>
                                 <td>5</td>
@@ -295,7 +295,6 @@
     </div>
 
     <!-- Modal de registro de movimiento -->
-    <div class="modal" id="movimientoModal">
         <div class="modal-header">
             <h3 class="modal-title">Registrar Movimiento de Inventario</h3>
             <button class="modal-close" id="cerrarModalMovimiento">&times;</button>
