feat: Agregar opciones de filtro por día y semana en reportes

--- a/pages/reportes.html
+++ b/pages/reportes.html
@@ -78,6 +78,8 @@
                     <div class="form-group">
                         <label for="date-range">Rango de Fechas</label>
                         <select id="date-range" class="form-control">
+                            <option value="current-day">Día Actual</option>
+                            <option value="current-week">Semana Actual</option>
                             <option value="current-month">Mes Actual</option>
                             <option value="last-month">Mes Anterior</option>
                             <option value="quarter">Último Trimestre</option>
